// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Component should render correctly when no company is searched 1`] = `
<div
  className="search-container"
>
  <div
    className="search-container__input-wrapper"
  >
    <span
      className="search-container__icon"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-search fa-w-16 fa-lg "
        data-icon="search"
        data-prefix="fas"
        role="img"
        style={Object {}}
        viewBox="0 0 512 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
          fill="currentColor"
          style={Object {}}
        />
      </svg>
    </span>
    <input
      className="search-container__input"
      onChange={[Function]}
      type="text"
      value="Apple Inc. (AAPL)"
    />
  </div>
  <ul
    className="search-container__results-list"
  />
</div>
`;

exports[`Search Component should render correctly with search results 1`] = `
<Search>
  <div
    className="search-container"
  >
    <div
      className="search-container__input-wrapper"
    >
      <span
        className="search-container__icon"
      >
        <FontAwesomeIcon
          border={false}
          className=""
          fixedWidth={false}
          flip={null}
          icon="search"
          inverse={false}
          listItem={false}
          mask={null}
          pull={null}
          pulse={false}
          rotation={null}
          size="lg"
          spin={false}
          symbol={false}
          title=""
          transform={null}
        >
          <svg
            aria-hidden="true"
            className="svg-inline--fa fa-search fa-w-16 fa-lg "
            data-icon="search"
            data-prefix="fas"
            role="img"
            style={Object {}}
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
              fill="currentColor"
              style={Object {}}
            />
          </svg>
        </FontAwesomeIcon>
      </span>
      <input
        className="search-container__input"
        onChange={[Function]}
        type="text"
        value="Apple Inc. (AAPL)"
      />
    </div>
    <SearchResults
      onClickResult={[Function]}
      results={
        Array [
          Object {
            "name": "Apple Inc",
            "symbol": "Aapl",
          },
          Object {
            "name": "Alphabet Inc",
            "symbol": "Goo",
          },
        ]
      }
    >
      <ul
        className="search-container__results-list"
      >
        <Component
          company={
            Object {
              "name": "Apple Inc",
              "symbol": "Aapl",
            }
          }
          key="Aapl"
          onClickResult={[Function]}
        >
          <li
            className="search-container__result"
            onClick={[Function]}
          >
            Apple Inc
             (
            Aapl
            )
          </li>
        </Component>
        <Component
          company={
            Object {
              "name": "Alphabet Inc",
              "symbol": "Goo",
            }
          }
          key="Goo"
          onClickResult={[Function]}
        >
          <li
            className="search-container__result"
            onClick={[Function]}
          >
            Alphabet Inc
             (
            Goo
            )
          </li>
        </Component>
      </ul>
    </SearchResults>
  </div>
</Search>
`;
